Added an entries/latest route Changed settings to only apply fields that are valid Lots of work on web frontend

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,8 @@
 body {
-    padding-top: 50px;
+    padding-top: 70px;
 }
 
-.starter-template {
-    padding: 40px 15px;
-    text-align: center;
-}
+/*.starter-template {*/
+    /*padding: 40px 15px;*/
+    /*text-align: center;*/
+/*}*/
